# x402-mcp

./: .env.example  .gitignore  .mcp.json.example  CHANGES.md  CLAUDE.md  Dockerfile  Makefile  README.md  ROADMAP.md  docker-compose.yml  fly.toml  pyproject.toml  render.yaml  requirements.txt  run_stdio.py  server.json
app/: __init__.py  agent_surface.py  cdp_auth.py  challenge_cache.py  commerce.py  config.py  dashboard.py  demand.py  doctor.py  keyprovider.py  ledger_io.py  ledger_store.py  logging_config.py  main.py  manifest.py  mcp_server.py  mn_compliance.py  models.py  ops_events.py  os_monitor.py  payment_rails.py  probe_rate_limit.py  pulse.py  redis_client.py  ssrf_guard.py  stripe_payments.py  tools_registry.py  tx_decision.py  wallet_read.py  x402_services.py
dashboard/: index.html  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
deployment/: Dockerfile  docker-compose.seller.yml  seller.env.example  set_fly_secrets.sh
docs/: DEPLOY-PLAN.md  SELLER-STOREFRONT.md  SETUP.md  UI-HANDOFF-v2.md  UI-HANDOFF.md  USER-GUIDE.md  agent-ops.md  architecture.md  runbook.md
examples/: x402_gate.py
ledger/: .gitignore  policy.json
manifests/: cursor-mcp.json
scripts/: build_drive_staging.py  capture_goal_evidence.py  capture_mission_control_evidence.py  dev_up.py  run_goal_verification.ps1  seed_purchase.py  settle_once.py  vercel_connect_token.py  verify_docker.py  verify_goal.py
tests/: conftest.py  test_agent_surface.py  test_assessor.py  test_cdp_auth.py  test_challenge_cache.py  test_commerce.py  test_dashboard.py  test_demand.py  (+38 more)
(+64 files in other folders)
